--- a/client/index.html
+++ b/client/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Web3Radar - AI-Powered Web3 Prospecting" />
     <meta property="og:description" content="Automate your Web3 prospecting with AI-powered project discovery and lead generation" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://rawfreedomai.com/lovable-uploads/398ca217-7313-49b0-a990-12400b5781dc.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@Web3Radar" />
+    <meta name="twitter:image" content="https://rawfreedomai.com/lovable-uploads/398ca217-7313-49b0-a990-12400b5781dc.png" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
